# Termony

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  READMECN.md  README_CN.md  build-linux.sh  build-macos.sh  build-profile.json5  create-hnp.sh  push.sh  sign.js  sign.py
.ci/arkuix/: LICENSE.sha256
.github/workflows/: hnp.yml  test.yml
AppScope/: app.json5
build-hnp/: .gitignore  Makefile  hnp.json
build-hnp/aria2/: Makefile
build-hnp/bash/: Makefile
build-hnp/binutils/: Makefile
build-hnp/busybox/: 0001-skip-proc-stat.diff  Makefile
build-hnp/c-ares/: Makefile
build-hnp/coremark/: Makefile
build-hnp/curl/: Makefile
build-hnp/elf-loader/: Makefile  jit.patch
build-hnp/expat/: Makefile
build-hnp/fastfetch/: Makefile
build-hnp/ffmpeg/: Makefile  ohos_config.sh
build-hnp/fish/: 0001-fix-cmake.diff  0002-fix-getpwuid.diff  Makefile
build-hnp/gcc/: 0001-fix-gcc.diff  Makefile
build-hnp/gdb/: Makefile  linux-amd64-ipa.patch  linux-btrace.diff
build-hnp/gettext/: Makefile
build-hnp/git/: Makefile
build-hnp/glib/: Makefile
build-hnp/gmp/: Makefile
build-hnp/hdc/: 0001-ignore-usb-fail.diff  CMakeLists.txt  Makefile
build-hnp/htop/: 0001-skip-proc-stat.diff  Makefile
build-hnp/kbd/: Makefile  x86_64.diff
build-hnp/libarchive/: Makefile
build-hnp/libevent/: Makefile
build-hnp/libfdk-aac/: Makefile
build-hnp/libffi/: Makefile
build-hnp/libglib/: Makefile
build-hnp/libidn2/: Makefile
build-hnp/libmp3-lame/: Makefile
build-hnp/libogg/: Makefile
build-hnp/libopus/: Makefile
build-hnp/libsvt-av1/: Makefile
build-hnp/libunistring/: Makefile
build-hnp/libusb/: Makefile
build-hnp/libvorbis/: Makefile
build-hnp/libvpx/: Makefile
build-hnp/sl/: Makefile
entry/: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  terminal.cpp  terminal.h  test.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
hvigor/: hvigor-config.json5
(+122 files in other folders)
